--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,27 @@
   }
 }
 
+[data-theme='dark'] {
+  --background-color: #121212;
+  --text-color: black;
+  --button-text-color: black;
+  --background: #ffffff;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  background-color: var(--button-background);
+  color: var(--button-text-color);
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 0.8;
 }
