--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,13 @@ button:hover {
   opacity: 0.8;
 }
 
+.dark {
+  --background-color: #121212;
+  --text-color: black;
+  --button-text-color: black;
+  --color: black;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
