--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@ body {
 button {
   background-color: var(--button-background);
   color: var(--button-text-color);
-  padding: 10px;
+  /* padding: 10px; */
   border: none;
   cursor: pointer;
 }
